--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "description": "Игра по типу Wordament: разгадывание слов на поле 4x4, синхронные раунды для всех игроков.",
   "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"node src/user-api.js\" \"react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test"
   },
@@ -31,5 +31,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001",
+  "devDependencies": {
+    "concurrently": "^9.2.0"
+  }
 }
